tweak some application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# Dados de conexão com o banco
+# DB padrao jdbc:postgresql://localhost:5432/postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+# Configuração para mostrar o SQL no console
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+# Para criar e excluir a tabela quando a aplicação iniciar e finalizar, opçoes: none, validate, update, create, and create-drop
+# ps. padrão: "none" exeto quando o banco de dados é em memória ex. H2
+spring.jpa.hibernate.ddl-auto=create-drop
