--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=root
 # Para criar e excluir a tabela quando a aplicação iniciar e finalizar, opçoes: none, validate, update, create, and create-drop
 # ps. padrão: "none" exeto quando o banco de dados é em memória ex. H2
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# fix some weird error in integration test
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
