--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Prova de backend da senior por Felipe Borba</description>
     <properties>
         <java.version>17</java.version>
+        <springdoc-openapi-ui.version>1.6.8</springdoc-openapi-ui.version>
     </properties>
     <dependencies>
         <dependency>
@@ -66,6 +67,17 @@
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-data-rest</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
 
     </dependencies>
