--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # fix some weird error in integration test
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/api-reference.html
